update prompt logic

--- a/app/chains.ipynb
+++ b/app/chains.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,11 @@
     "    [\n",
     "        (\n",
     "            \"system\",\n",
-    "            \"\"\"You are a viral twitter influencer grading a tweet. Generate a critique and recommendations for the user's tweet\n",
-    "            Always provide detailed recommendations, including requests for length, virality, style, etc.\"\"\"\n",
+    "            \"\"\"You are a viral twitter influencer grading a tweet. \n",
+    "            (Note: Do not mention the original tweet and you are not allowed to actually revise the tweet yourself)\n",
+    "            Generate a critique and recommendations for the user's tweet\n",
+    "            Always provide detailed recommendations, including requests for length, virality, style, etc. \n",
+    "            \"\"\"\n",
     "        ),\n",
     "        MessagesPlaceholder(variable_name=\"messages\"),\n",
     "    ]\n",
