update print statements

--- a/app/main.ipynb
+++ b/app/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,38 +35,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generation_node(state: Sequence[BaseMessage]):\n",
-    "    print(f\"Step {len(state)}:__________________________\")\n",
-    "    print(state[-1].content)\n",
+    "    print(f\"Node 1:_____________ GENERATION NODE _____________\")\n",
+    "    res = generation_chain.invoke({\"messages\": state})\n",
+    "    print(res.content)\n",
     "    print()\n",
     "    print()\n",
     "    print()\n",
-    "    return generation_chain.invoke({\"messages\": state})"
+    "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reflection_node(state: Sequence[BaseMessage]):\n",
-    "    print(f\"Step {len(state)}:__________________________\")\n",
-    "    print(state[-1].content)\n",
+    "    print(f\"Node 2:______________ REFLECTION NODE ____________\")\n",
+    "    res = reflection_chain.invoke({\"messages\": state})\n",
+    "    print(res.content) \n",
     "    print()\n",
     "    print()\n",
     "    print()\n",
-    "    res = reflection_chain.invoke({\"messages\": state}) \n",
     "    return [HumanMessage(content=res.content)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,24 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
     "def should_continue(state: Sequence[BaseMessage]):\n",
+    "    print(f\"Conditional Edge:_____________ SHOULD CONTINUE EDGE _____________\")\n",
     "    if 6 <= len(state):\n",
-    "        print(f\"Step {len(state)}:__________________________\")\n",
-    "        print(state[-1].content)\n",
-    "        print()\n",
-    "        print()\n",
-    "        print()\n",
+    "        print(f\"Path 2:_____________ END _____________\")\n",
     "        return END\n",
+    "    print(f\"Path 1:_____________ REFLECT_____________\")\n",
+    "    print()\n",
+    "    print()\n",
+    "    print()\n",
     "    return REFLECT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,65 +183,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 1:__________________________\n",
-      "Make this tweet better: \n",
-      "                      OpenAI released function calling a few months ago, \n",
-      "                      and it's been a major  upgrade for AI projects. \n",
-      "                      It's a new  capability that connects language models to external functions, \n",
-      "                      enabling  them to access external info and perform complex tasks. \n",
-      "                      Let's dive into this thread 🧵!\n",
+      "Node 1:_____________ GENERATION NODE _____________\n",
+      "\"Exciting news from OpenAI! Their latest function calling feature, released a few months back, has revolutionized AI projects. This new capability seamlessly connects language models to external functions, unlocking access to external data and enabling the execution of intricate tasks. Dive into this thread with me 🧵! #OpenAI #AI #Innovation\"\n",
       "\n",
       "\n",
       "\n",
-      "Step 2:__________________________\n",
-      "Exciting news from OpenAI! Their latest function calling release has revolutionized AI projects by connecting language models to external functions. This new capability allows models to access external information and tackle complex tasks. Join me as we explore this game-changing update! 🚀 #OpenAI #AIRevolution\n",
+      "Conditional Edge:_____________ SHOULD CONTINUE EDGE _____________\n",
+      "Path 1:_____________ REFLECT_____________\n",
       "\n",
       "\n",
       "\n",
-      "Step 3:__________________________\n",
-      "Critique:\n",
-      "The original tweet provides a good overview of OpenAI's function calling release but lacks excitement and engagement. It could benefit from a more captivating and enthusiastic tone to draw in readers and encourage interaction.\n",
+      "Node 2:______________ REFLECTION NODE ____________\n",
+      "This revised tweet captures the essence of OpenAI's new function calling feature effectively. To enhance the tweet further, consider the following recommendations:\n",
       "\n",
-      "Recommendations:\n",
-      "1. Add more excitement: Start the tweet with a captivating statement to grab the reader's attention. For example, \"🚀 Exciting news alert! OpenAI's groundbreaking function calling release is transforming the AI landscape!\"\n",
-      "2. Engage the audience: Encourage interaction by asking a question or prompting readers to share their thoughts. For instance, \"What do you think about the latest function calling release from OpenAI? Share your thoughts below! #AI #OpenAI\"\n",
-      "3. Utilize emojis: Emojis can help convey emotion and add visual appeal to the tweet. Consider using emojis like 🔥, 💡, or 👀 to make the tweet more engaging.\n",
-      "4. Consider adding hashtags: Including relevant hashtags like #AI, #OpenAI, or #TechNews can help increase the tweet's visibility and reach a broader audience.\n",
-      "5. Maintain a concise length: While adding excitement and engagement, ensure the tweet remains concise and easy to read. Aim to keep the tweet under 280 characters for optimal engagement.\n",
+      "1. **Engaging Opener**: Begin the tweet with a catchy and engaging opener to capture the audience's attention. For example, using phrases like \"Big news!\" or \"Exciting update!\" can generate curiosity and interest right from the start.\n",
       "\n",
-      "By incorporating these recommendations, you can enhance the tweet's impact and increase its potential for virality among your audience.\n",
+      "2. **Incorporate Visuals**: Including a relevant image, GIF, or video related to the function calling feature can make the tweet more visually appealing and increase engagement. Visual content often attracts more attention on social media platforms.\n",
       "\n",
+      "3. **Call to Action**: Encourage your audience to take a specific action related to the topic. For example, you could prompt them to share their thoughts, ask questions, or explore the feature themselves. A call to action can drive interaction and conversations around the tweet.\n",
       "\n",
+      "4. **Hashtags**: Incorporate relevant hashtags such as #OpenAI, #AI, and #Innovation to increase the tweet's visibility and reach a wider audience interested in artificial intelligence and technology advancements.\n",
       "\n",
-      "Step 4:__________________________\n",
-      "🚀 Exciting news alert! OpenAI's groundbreaking function calling release is transforming the AI landscape! 💡 Ready to dive into the future of AI projects with this game-changing capability connecting language models to external functions? Share your thoughts below! #OpenAI #AIRevolution\n",
+      "5. **Length**: While the revised tweet is concise and informative, you could consider expanding on the benefits or potential implications of the function calling feature in a follow-up tweet or thread. This can provide more depth and insights for your audience.\n",
+      "\n",
+      "By implementing these suggestions, you can enhance the tweet's impact, engagement, and overall effectiveness in conveying the significance of OpenAI's function calling feature to your followers.\n",
       "\n",
       "\n",
       "\n",
-      "Step 5:__________________________\n",
-      "The revised tweet introduces the topic with an enthusiastic tone and engages the audience by prompting them to share their thoughts. The use of emojis adds visual appeal and helps convey excitement. Including relevant hashtags like #OpenAI and #AIRevolution can enhance the tweet's visibility and reach a broader audience interested in AI technology.\n",
-      "\n",
-      "To further improve the tweet:\n",
-      "1. Consider using more specific and targeted hashtags related to AI and technology trends to attract a niche audience interested in the subject matter.\n",
-      "2. Add a call-to-action to encourage followers to engage with the content, such as asking them to retweet if they are excited about the latest update from OpenAI.\n",
-      "3. Incorporate a brief teaser or highlight about the most significant impact of the function calling release to pique curiosity and generate more interest.\n",
-      "\n",
-      "Overall, the tweet is engaging and informative, but incorporating these additional elements can further enhance its appeal and potential for virality.\n",
+      "Node 1:_____________ GENERATION NODE _____________\n",
+      "\"🚀 Big news from OpenAI! Their latest function calling feature has transformed AI projects, bridging language models with external functions for enhanced capabilities. Discover how this innovation is reshaping the future of AI projects. Dive in with me 🧵! #OpenAI #AI #Innovation #TechTrends\"\n",
       "\n",
       "\n",
       "\n",
-      "Step 6:__________________________\n",
-      "🚀 Exciting news alert! OpenAI's groundbreaking function calling release is revolutionizing AI projects! 💡 Curious about the latest capabilities connecting language models to external functions? 🤖 Dive in and share your thoughts! 🔥 #OpenAI #AIRevolution #TechTrends\n",
+      "Conditional Edge:_____________ SHOULD CONTINUE EDGE _____________\n",
+      "Path 1:_____________ REFLECT_____________\n",
       "\n",
       "\n",
-      "\n"
+      "\n",
+      "Node 2:______________ REFLECTION NODE ____________\n",
+      "This revised tweet incorporates engaging language, a sense of excitement, and relevant hashtags to attract attention and generate interest in OpenAI's function calling feature. To further enhance the tweet, consider the following recommendations:\n",
+      "\n",
+      "1. **Visual Content**: To make the tweet more visually appealing and increase engagement, consider adding a relevant image, GIF, or video that showcases the function calling feature in action. Visuals can capture the audience's attention and create a stronger impact.\n",
+      "\n",
+      "2. **Personal Touch**: Consider adding a personal anecdote or insight about how the function calling feature has impacted your work or interests. Sharing a personal connection can make the tweet more relatable and authentic to your followers.\n",
+      "\n",
+      "3. **Interactive Element**: Encourage your audience to participate by asking a question related to the function calling feature or prompting them to share their experiences with AI projects. Adding an interactive element can spark conversations and increase engagement on the tweet.\n",
+      "\n",
+      "4. **Length**: While the revised tweet is concise and impactful, you could consider expanding on the benefits or potential applications of the function calling feature in a follow-up tweet or thread. Providing additional information can enrich the conversation and provide more value to your audience.\n",
+      "\n",
+      "Incorporating these recommendations can help elevate the tweet's engagement, relevance, and overall impact on your followers, driving more interactions and discussions around OpenAI's innovative feature.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Node 1:_____________ GENERATION NODE _____________\n",
+      "🚀 Exciting news! OpenAI's function calling feature is revolutionizing AI projects by connecting language models with external functions for enhanced capabilities. How has this innovation impacted your work? Share your thoughts as we explore the future of AI together 🧵! #OpenAI #AI #Innovation #TechTrends\n",
+      "\n",
+      "\n",
+      "\n",
+      "Conditional Edge:_____________ SHOULD CONTINUE EDGE _____________\n",
+      "Path 2:_____________ END _____________\n"
      ]
     }
    ],
@@ -249,14 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"🚀 Exciting news in AI! OpenAI's function calling feature is transforming projects by connecting language models to external functions, unlocking new possibilities. How do you envision this shaping the future of AI applications? Share your thoughts! 💭💡 #AI #OpenAI #FunctionCalling\"\n"
+      "🚀 Exciting news! OpenAI's function calling feature is revolutionizing AI projects by connecting language models with external functions for enhanced capabilities. How has this innovation impacted your work? Share your thoughts as we explore the future of AI together 🧵! #OpenAI #AI #Innovation #TechTrends\n"
      ]
     }
    ],
